Adição do trabalho com imagens

--- a/Section4_Intro_css/index.html
+++ b/Section4_Intro_css/index.html
@@ -68,5 +68,47 @@
     <h2 id="exclusiveh2" class="classh2">aula 10 primeiro h2</h2>
     <h2 class="classh2">aula 10 segundo h2</h2>
     <h2>aula 10 terceiro h2</h2>
+
+    <!-- aula 11 cores-->
+    <!-- p.colorname + tab igual o exemplo abaixo: -->
+    <p class="colorname">qualquer texto</p>
+
+    <!-- p#colornameid + tab igual o exemplo abaixo -->
+    <p id="colornameid">qualquer texto id</p>
+
+
+    <!-- class 17 -->
+
+    <p class="bg"> mude o meu background</p>
+    <h2 class="bg2"> trocar aqui também</h2>
+
+
+    <!-- class 18 aula de opacidade -->
+     <div class="opacity-div">
+      <span>estou aqui!</p>
+     </div>
+
+     <!-- 19 rgba com opacidade -->
+    <div class="rgbaopacidade">
+      <span>Vou ser visivel</span>
+    </div>
+
+<!-- aula 20 backgroundimage -->
+    <div class="backgroundimage">
+      <h1>Imagem valfenda</h1>
+    </div>
+
+    <!-- aula 21 imagecenter  -->
+     <div class="centered-bg">
+
+     </div>
+
+     <!-- aula 22 box model -->
+
+     <div class="heith-width"></div>
+
+     <div class="heith-width2"></div>
+
+
   </body>
 </html>
