--- a/Section4_Intro_css/index.html
+++ b/Section4_Intro_css/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="css/lists.css" />
   </head>
   <body>
-    <!-- aula 1  Inline -->
+    <h4>Aula 1 Inline-css</h4>
     <h1 style="color: red">Mudar cor com o Inline</h1>
     <h1 style="color: blue">Outro Titulo</h1>
+    <h4>Aula 2 várias regras de CSS</h4>
     <!-- aula 2 -->
     <!-- várias regras de css -->
     <h1 style="color: purple; font-size: 50px; border-bottom: 1px solid red">
@@ -58,7 +59,7 @@
       adipisci labore?
     </p>
 
-    <!-- aula 9 ids -->
+    <h4>aula 9 ids</h4>
 
     <h1 id="exclusiveh1">esté é um titulo com id</h1>
 
@@ -69,46 +70,104 @@
     <h2 class="classh2">aula 10 segundo h2</h2>
     <h2>aula 10 terceiro h2</h2>
 
-    <!-- aula 11 cores-->
+    aula 11 cores
     <!-- p.colorname + tab igual o exemplo abaixo: -->
     <p class="colorname">qualquer texto</p>
 
     <!-- p#colornameid + tab igual o exemplo abaixo -->
     <p id="colornameid">qualquer texto id</p>
 
+    class 17 de background
 
-    <!-- class 17 -->
+    <p class="bg">mude o meu background</p>
+    <h2 class="bg2">trocar aqui também</h2>
 
-    <p class="bg"> mude o meu background</p>
-    <h2 class="bg2"> trocar aqui também</h2>
+    class 18 aula de opacidade
+    <div class="opacity-div">
+      <span>estou aqui!</span>
+    </div>
 
-
-    <!-- class 18 aula de opacidade -->
-     <div class="opacity-div">
-      <span>estou aqui!</p>
-     </div>
-
-     <!-- 19 rgba com opacidade -->
+    19 rgba com opacidade
     <div class="rgbaopacidade">
       <span>Vou ser visivel</span>
     </div>
 
-<!-- aula 20 backgroundimage -->
+    aula 20 backgroundimage
     <div class="backgroundimage">
       <h1>Imagem valfenda</h1>
     </div>
 
-    <!-- aula 21 imagecenter  -->
-     <div class="centered-bg">
+    <h4>aula 21 imagecenter</h4>
+    <div class="centered-bg"></div>
 
-     </div>
+    <h4>aula 22 box model</h4>
 
-     <!-- aula 22 box model -->
+    <div class="heith-width"></div>
 
-     <div class="heith-width"></div>
+    <div class="heith-width2"></div>
 
-     <div class="heith-width2"></div>
+    <h4>Aula 23 padding</h4>
 
+    <div class="without-padding"><span>Esse não tem padding</span></div>
+    <br />
+    <div class="with-padding"><span>Esse tem padding</span></div>
 
+    <h4>Aulas 24 padding individual</h4>
+    <div class="indivual-padding">
+      <span>Este elemento tem padding individual</span>
+    </div>
+
+    <h4>Aula 25 shorthand properties</h4>
+
+    <div class="shorthand-rules">
+      <span> shorthand rules</span>
+    </div>
+
+    <h4>aula 26 padding com width</h4>
+
+    <div class="without-border-box">
+      <span>Algum conteúdo</span>
+    </div>
+
+    <div class="with-border-box">
+      <span>algum conteúdo</span>
+    </div>
+
+    <h4>aula 27 border</h4>
+    <div class="border">
+      <span> borda</span>
+    </div>
+    <div class="border2">
+      <span> borda2</span>
+    </div>
+
+    <h4>aula 28 bordar individuais</h4>
+    <div class="border-individual">
+      <span> aqui vai uma bordar a esquerda</span>
+    </div>
+
+    <h4>aula 29 border radius</h4>
+    <div class="border-radius">
+      <span> borda arrendondada</span>
+    </div>
+
+    <div class="radius-without-border">
+      <span>arrendado</span>
+    </div>
+
+    <h4>aula 30 margem</h4>
+    <div class="margem">Margem</div>
+    <div class="margem-top">Margem topd</div>
+    <div class="margeshorthange">Margem shorthand</div>
+
+    <h4>aula 31 boxmodel componente unified</h4>
+    <div class="class-31">
+      <span>utilizo todas propriedades do box model</span>
+    </div>
+
+    <h4>challenger css 2</h4>
+    <div id="challenger-css">
+      <h2> sou o titulo do challenger</h2>
+    </div>
   </body>
 </html>
