--- a/Section4_Intro_css/index.html
+++ b/Section4_Intro_css/index.html
@@ -167,7 +167,70 @@
 
     <h4>challenger css 2</h4>
     <div id="challenger-css">
-      <h2> sou o titulo do challenger</h2>
+      <h2>sou o titulo do challenger</h2>
     </div>
+
+    <h4>Aula 33 formatação de texto</h4>
+
+    <div class="text-aligment">
+      <p class="text-aligment-right">Alinhado a direita</p>
+      <p class="text-aligment-center">Alinhado a center</p>
+      <p class="text-aligment-right">Alinhado a direita</p>
+      <p class="text-aligment-right">Alinhado a direita</p>
+    </div>
+    <div class="container-center">
+      <h2>estamos centralizados</h2>
+      <p>texto</p>
+      <p>eae</p>
+    </div>
+
+    <h4>Aula 34 text decorations</h4>
+    <p class="underline">underline</p>
+    <p class="linethrought">linethrought</p>
+    <a href="#" class="remove-underline">sem underline </a>
+
+    <h4>Aula 35 text transformations</h4>
+    <p class="upper">esse texto é em caixa aula</p>
+    <p class="lower">ESTE SERÁ LOWER</p>
+
+    <h4>Aula 36 letter spacing</h4>
+    <p class="letterspacing">esse texto tera espaçamento nas letras</p>
+
+    <h4>Aula 37 Fontes</h4>
+    <h5 class="serif">Font Serif</h5>
+    <h5 class="sans-serif">Font sans-serif</h5>
+    <h5 class="monospace">Font monospace</h5>
+    <h5 class="cursive">Font cursive</h5>
+    <h5 class="fantasy">Font fantasy</h5>
+
+    <h4>Aula 38 Estilo de fonte</h4>
+    <h5 class="italic">eu sou um texto em italico</h5>
+    <h5 class="oblique">Eu sou um texto em oblique</h5>
+    <h5>sou um texto normal</h5>
+
+    <h4>Aula 39 fonte weight</h4>
+    <h5 class="fontweightheavy">eu sou um texto com fontweight</h5>
+    <h5 class="fontweightmedium">eu sou um texto com fontweight</h5>
+    <h5 class="fontweightlight">eu sou um texto com fontweight</h5>
+
+    <h4>Aula 40 fonte size</h4>
+    <h5 class="fontsizesmall">eu sou um texto pequeno</h5>
+    <h5 class="fontsizemedium">eu sou um texto medio</h5>
+    <h5 class="fontsizelarger">eu sou um texto grande</h5>
+
+    <h4>Aula 41 Display</h4>
+    <div class="inlineblock"><span>A</span></div>
+    <div class="inlineblock"><span>B</span></div>
+    <div class="inlineblock"><span>C</span></div>
+    <span>sou um span e estou ao lado</span>
+    <span class="spandisplay"> eu sou um span e estou embaixo</span>
+
+    <h4>aula 42 Display None</h4>
+    <h5 class="fontsizelarger" id="invisible">
+      eu sou um texto grande e invisivel
+    </h5>
+    <h5>ache se puder</h5>
+
+    <h4>aula 43 Element positions</h4>
   </body>
 </html>
