--- a/Section4_Intro_css/index.html
+++ b/Section4_Intro_css/index.html
@@ -231,6 +231,20 @@
     </h5>
     <h5>ache se puder</h5>
 
-    <h4>aula 43 Element positions</h4>
+    <h4>aula 43 Element positions - Static</h4>
+    <div class="static"><span>eu sou uma div static</span></div>
+
+    <h4>aula 44 Element positions - Relative</h4>
+
+    <div class="relative"><span>eu sou uma div relative</span></div>
+    <p>eu sou um paragrafo</p>
+
+    <h4>aula 45 Element positions - Absolute</h4>
+    <div class="absolute"><span>eu sou uma div ABSOLUTE</span></div>
+    <p>eu sou um paragrafo</p>
+
+    <h4>aula 46 Element positions - Relative + Absolute</h4>
+    <div class="relative-container"><span>eu sou uma div ABSOLUTE</span></div>
+    <p>eu sou um paragrafo</p>
   </body>
 </html>
