--- a/Section4_Intro_css/index.html
+++ b/Section4_Intro_css/index.html
@@ -59,6 +59,11 @@
       adipisci labore?
     </p>
 
+    <h4>Aula 48 sticky position</h4>
+    <div class="pos-sticky">
+      <span>Sou um sticky</span>
+    </div>
+
     <h4>aula 9 ids</h4>
 
     <h1 id="exclusiveh1">esté é um titulo com id</h1>
@@ -246,5 +251,22 @@
     <h4>aula 46 Element positions - Relative + Absolute</h4>
     <div class="relative-container"><span>eu sou uma div ABSOLUTE</span></div>
     <p>eu sou um paragrafo</p>
+
+    <h4>Aula 47 position fixed</h4>
+    <div class="pos-fixed">
+      <span> estou fixo </span>
+    </div>
+
+    <h4>Aula 48 sticky position</h4>
+    <div class="pos-sticky">
+      <span>Sou um sticky</span>
+    </div>
+
+    <h4>Aula 49 Z Index</h4>
+    <div class="relative-container">
+      <div class="aboslut1"></div>
+      <div class="aboslut2"></div>
+      <div class="aboslut3"></div>
+    </div>
   </body>
 </html>
