--- a/Section4_Intro_css/index.html
+++ b/Section4_Intro_css/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>css</title>
     <!-- aula 4  -->
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="../css/lists.css" />
   </head>
   <body>
