--- a/Section4_Intro_css/index.html
+++ b/Section4_Intro_css/index.html
@@ -6,7 +6,7 @@
     <title>css</title>
     <!-- aula 4  -->
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="../css/lists.css" />
+    <link rel="stylesheet" href="css/lists.css" />
   </head>
   <body>
     <h4>Aula 1 Inline-css</h4>
