--- a/Section6_forms/index.html
+++ b/Section6_forms/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -56,9 +56,7 @@
           <input type="text" name="lastname" />
         </fieldset>
       </div>
-      <div>
-        
-      </div>
+      <div></div>
       <input type="submit" value="Enviar" />
     </form>
   </body>
