add form for vehicle registration and update course links

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
       <li class="course-list">
         <a href="Section5_ExamplePage/index.html">Sessão 5 </a>
       </li>
-      <li class="course-list"></li>
-      <li class="course-list"></li>
+      <li class="course-list">
+        <a href="Section6_forms/index.html">Sessão 6</a>
+      </li>
+      <li class="course-list">
+        <a href="Section7_Form_project/index.html">Sessão 7</a>
+      </li>
       <li class="course-list"></li>
       <li class="course-list"></li>
       <li class="course-list"></li>
