--- a/index.html
+++ b/index.html
@@ -10,28 +10,42 @@
     <p class="main-title">Curso da Udemy seguimentado em diversas aulas:</p>
     <ul>
       <li class="course-list">
-        <a href="Section2_html_css/index.html">Sessão 1</a>
+        <a href="Section2_html_css/index.html"
+          >Sessão 1 - Introdução ao HTML e CSS</a
+        >
       </li>
       <li class="course-list">
-        <a href="Section3_Intro_html/index.html">Sessão 2 </a>
+        <a href="Section3_Intro_html/index.html"
+          >Sessão 2 - Introdução ao HTML
+        </a>
       </li>
       <li class="course-list">
         <a href="Section4_Intro_css/index.html">Sessão 3 </a>
       </li>
       <li class="course-list">
-        <a href="Section4_Intro_css/index.html">Sessão 4 </a>
+        <a href="Section4_Intro_css/index.html">Sessão 4 - Introdução ao CSS</a>
       </li>
       <li class="course-list">
-        <a href="Section5_ExamplePage/index.html">Sessão 5 </a>
+        <a href="Section5_ExamplePage/index.html"
+          >Sessão 5 - Projeto de pagina de tributo</a
+        >
       </li>
       <li class="course-list">
-        <a href="Section6_forms/index.html">Sessão 6</a>
+        <a href="Section6_Forms/index.html"
+          >Sessão 6 - Introdução a Formulários</a
+        >
       </li>
       <li class="course-list">
-        <a href="Section7_Form_project/index.html">Sessão 7</a>
+        <a href="Section7_Form_project/index.html"
+          >Sessão 7 - Projeto de Formulário
+        </a>
       </li>
-      <li class="course-list"></li>
-      <li class="course-list"></li>
+      <li class="course-list">
+        <a href="Section8_Responsiveness/">Sessão 8 - Responsividade </a>
+      </li>
+      <li class="course-list">
+        <a href="Section8_Responsiveness/">Sessão 9 - vai ter </a>
+      </li>
       <li class="course-list"></li>
     </ul>
   </body>
