update links for sections 8 and 9, and add styles and logo for hDC host project

--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
         </a>
       </li>
       <li class="course-list">
-        <a href="Section8_Responsiveness/">Sessão 8 - Responsividade </a>
+        <a href="Section8_Responsiveness/index.html"
+          >Sessão 8 - Responsividade
+        </a>
       </li>
       <li class="course-list">
-        <a href="Section8_Responsiveness/">Sessão 9 - vai ter </a>
+        <a href="Section9_hdc_host_project/index.html"
+          >Sessão 9 - projeto hDC
+        </a>
       </li>
       <li class="course-list"></li>
     </ul>
