--- a/Section9_hdc_host_project/index.html
+++ b/Section9_hdc_host_project/index.html
@@ -103,13 +103,13 @@
             <div class="plans">
               <ul>
                 <li class="price" id="recomended">R$50/mês</li>
-                <li class="plan-name" >Dedicado plus</li>
+                <li class="plan-name">Dedicado plus</li>
                 <li>10 Subdominios</li>
                 <li>100 contas de email</li>
                 <li>10GB de espaço</li>
                 <li>C-panel</li>
                 <li>Suporte 24/7</li>
-                <li class="plan-btn"  id="recomended">Saber mais</li>
+                <li class="plan-btn" id="recomended">Saber mais</li>
               </ul>
             </div>
             <div class="plans">
@@ -130,9 +130,15 @@
           <h2>Qual domínio você quer para o seu site?</h2>
           <p>Verifique se o domínio está disponível</p>
           <form action="">
-            <input type="text" name="domain" id="domain" placeholder="Digite o domínio desejado" />
-            <input type="submit" value="Procurar Dominio"></input>
+            <input
+              type="text"
+              name="domain"
+              id="domain"
+              placeholder="Digite o domínio desejado"
+            />
+            <input type="submit" value="Procurar Dominio" />
           </form>
+        </section>
       </main>
     </div>
   </body>
